feat: разделение GameView на разные классы